# ink-meta-transaction

./: .gitignore  Cargo.toml  README.md  lib.rs  package.json
contracts/flipper/: Cargo.toml
contracts/inkmetatransaction/: lib.rs
tests/: globalSetup.ts  ink-meta-transaction.spec.ts
typechain-generated/data/: inkmetatransaction.json
typechain-generated/event-types/: inkmetatransaction.ts
typechain-generated/events/: inkmetatransaction.ts
typechain-generated/mixed-methods/: inkmetatransaction.ts
typechain-generated/query/: inkmetatransaction.ts
typechain-generated/types-arguments/: inkmetatransaction.ts
typechain-generated/types-returns/: inkmetatransaction.ts
