[package]
name = "ink_meta_transaction"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.0", default-features = false }
ink_metadata = { version = "3.0", default-features = false, features = [
    "derive",
], optional = true }
ink_env = { version = "3.0", default-features = false }
ink_storage = { version = "3.0", default-features = false }
ink_lang = { version = "3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, features = [
    "derive",
], optional = true }
sha3 = "0.10.6"

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = false }
sp-application-crypto = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = false }


[lib]
name = "ink_meta_transaction"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "sp-core/std",
    "sp-application-crypto/std",
    "sp-runtime/std",
]
ink-as-dependency = []
